--- a/Resto.Front.Api.DataSaturation/Resto.Front.Api.DataSaturation.csproj
+++ b/Resto.Front.Api.DataSaturation/Resto.Front.Api.DataSaturation.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="Microsoft.Bcl.HashCode" Version="6.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Resto.Front.Api.V8" Version="8.7.6032" />
 		<PackageReference Include="System.Runtime" Version="4.3.1" />
