--- a/Resto.Front.Api.DataSaturation/Resto.Front.Api.DataSaturation.csproj
+++ b/Resto.Front.Api.DataSaturation/Resto.Front.Api.DataSaturation.csproj
@@ -3,8 +3,13 @@
 	<PropertyGroup>
 		<TargetFramework>net472</TargetFramework>
 		<UseWPF>true</UseWPF>
-    <PlatformTarget>x86</PlatformTarget>
+        <PlatformTarget>x86</PlatformTarget>
+        <Platforms>AnyCPU;x86</Platforms>
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Remove="Resto.Front.Api.DataSaturation.ConnectionLib.dll" />
+	  <None Remove="Resto.Front.Api.DataSaturation.ConnectionLib.pdb" />
+	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Bcl.HashCode" Version="6.0.0" />
@@ -25,14 +30,81 @@
         <Reference Include="System.Xml" />
   </ItemGroup>
     <ItemGroup>
-      <None Update="Assets\default.jpg">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="Assets\default_image.jpg">
+      <Compile Update="Resources\Resources.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Resources.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Resources.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Resources.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Resourceы.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Resourceы.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Update="Resources\Resources.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Resources.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Resourceы.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Resourceы.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+    <ItemGroup>
+      <None Update="Resources\default.jpg">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="Manifest.xml">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Injector64.exe">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Injector64.exe.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Injector64.pdb">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\NLog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\NLog.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Resto.Front.Api.DataSaturation.ConnectionLib.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Resto.Front.Api.DataSaturation.ConnectionLib.pdb">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Resto.Front.Api.DataSaturation.InjectorManager.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Resto.Front.Api.DataSaturation.InjectorManager.dll.metagen">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Resto.Front.Api.DataSaturation.InjectorManager.exp">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Resto.Front.Api.DataSaturation.InjectorManager.lib">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Resto.Front.Api.DataSaturation.InjectorManager.pdb">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\WpfAnimatedGif.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
  </Project>
